kubernetes/development/rest-service/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: poc
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
