kubernetes/development/rest-service/virtual-service-east:west.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-2
spec:
  hosts:
  - service-2.poc.svc.cluster.local
  - service-1.poc.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /ktb/rest/poc2
    route:
    - destination:
        host: service-2.poc.svc.cluster.local
        port:
          number: 8080
    # fault:
    #   abort:
    #     httpStatus: 502
    #     percent: 50
  - match:
    - uri:
        prefix: /ktb/rest/poc1
    route:
    - destination:
        host: service-1.poc.svc.cluster.local
        port:
          number: 8080
    # fault:
    #   abort:
    #     httpStatus: 504
    #     percent: 100
